--- a/fitnesstrackerapp/pubspec.yaml
+++ b/fitnesstrackerapp/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   uuid: ^4.5.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
